[project]
name = "video-game"
version = "0.1.0"
description = "test_data_scientist"
authors = [
    {name = "clement_loiseau"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "elasticsearch (==8.19.0)",
    "pytrec-eval (>=0.5,<0.6)",
    "openai (>=1.106.1,<2.0.0)",
    "mlflow (>=3.3.2,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
